[project]
name = "calendar-notifications-lambda"
version = "0.1.0"
description = "Calendar reminder Lambda"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "boto3>=1.38,<2",
    "botocore~=1.42",
    "core",
    "python-dotenv~=1.2.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["calendar_notifications_lambda"]

[tool.uv.sources]
core = { path = "../../core", editable = true }
