[project]
name = "cdk"
version = "0.1.0"
description = "AWS CDK infrastructure for microservices"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.150.0,<3",
    "constructs>=10.4.2,<11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
