[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmms-ticket-download"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "core",
    "httpx",
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "sentry-sdk~=2.58",
]

[tool.uv.sources]
core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
