[project]
name = "data-connection-outage-notifications-lambda"
version = "0.1.0"
description = "Data connection outage notification Lambda"
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "boto3",
    "botocore",
    "core",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["data_connection_outage_notifications_lambda"]

[tool.uv.sources]
core = { workspace = true }
