[project]
name = "kpi-pipeline-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3",
    "core",
    "pydantic>=2,<3",
    "python-dotenv",
    "sentry-sdk>=2,<3",
]

[tool.uv.sources]
core = { workspace = true }
