[project]
name = "inspectui"
version = "0.1.0"
description = "Database inspection TUI application"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "core",
    "psycopg2-binary>=2.9.11,<3",
    "python-dotenv>=1.0.0,<2",
    "pyyaml>=6.0.0,<7",
]

[tool.uv.sources]
core = { path = "../../core", editable = true }

[project.scripts]
inspectui = "inspectui.__main__:main"

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"
