[project]
name = "uploaded-documents"
version = "0.1.0"
description = "CLI to list all uploaded project documents and open an HTML report"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "core",
    "python-dotenv>=1.0.0,<2",
]

[tool.uv.sources]
core = { path = "../../core", editable = true }

[project.scripts]
uploaded-documents = "uploaded_documents.__main__:main_uploaded_documents"

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"
